# scomp-link

./: .gitignore  CONTRIBUTING.md  Cargo.toml  EXAMPLES.md  INSTALL.md  LICENSE  README.md  README_RUST.md  environment-windows.yaml  environment.yaml  install.sh  main.py  pixi.toml  requirements.txt  setup.cfg  test_main.py
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: test.yml
src/: lib.rs  main.rs
tests/: algorithm_comparison.rs
