[package]
name = "scomp-link"
version = "2.0.0"
edition = "2021"
description = "Photogrammetry Target Generator - generates circular photogrammetry targets with encoded bit patterns"
license = "Apache-2.0"
homepage = "https://github.com/gcsgeospatial/scomp-link"
repository = "https://github.com/gcsgeospatial/scomp-link"
authors = ["GCS Geospatial"]
keywords = ["photogrammetry", "targets", "computer-vision", "image-generation"]
categories = ["command-line-utilities", "graphics", "science"]
readme = "README_RUST.md"

[[bin]]
name = "scomp-link"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
# Test dependencies

[package.metadata.docs.rs]
# Documentation settings for docs.rs
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
